# AI-Group-Project

./: .gitignore  Project.py  pyproject.toml
src/my_package/: DataSyncAPI.py  __init__.py  main.py
