# put all libraries, in this dependency 

[project]
name = "AI-GROUP-PROJECT"
version = "3.14.6"
description = "A RAG pipeline"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Matthew C", email = "mcantu3@vols.utk.edu
        name = "Sri Lalitesh Inampudi" email = "sinampud@vols.utk.edu" 
      name = "Ghanishth Awasthi" email = "gawasthi@vols.utk.edu"
      name = "Manav Nagar" email = "mnagar@vols.utk.edu"
      name = "Whitfield Shepard" email = "wshepar3@vols.utk.edu"
 }
]
license = { text = "MIT" } 
classifiers = [
    "License :: OSI Approved :: MIT License",
]

# 1. Main Application Dependencies (Standard string array [])
dependencies = [
    #PUT LIBRARIES (which are dependencies) IN LIKE SO:
    "pandas"
    "numpy"
    "datasets"
    "sentence-transformers"
    "ChromaDB"
    "tdqm"
    "transformers"
    "langchain_text_splitters"
]